# ad_afqmc

./: .gitignore  README.md  conftest.py  pyproject.toml
ad_afqmc/: afqmc.py  chkpt_reader.py  driver.py  lattices.py  launch_script.py  prep.py  propagation.py  pyscf_interface.py  utils.py  wavefunctions.py
ad_afqmc_prototype/: afqmc.py  afqmc_lno.py  config.py  driver.py  lattices.py  lno.py  lno_helper.py  lnoafqmc.py  runtime_layout.py  runtime_provenance.py  setup.py  setup_fp.py  setup_lno.py  sharding.py  staging.py  stat_utils.py  testing.py  vap.py  walkers.py
docs/: architecture.md
examples/: README.md  cisd.py  cisd_ccsd_fp.py  cisd_fp.py  cisd_pt.py  gcisd.py  ghf.py  io.py  lno_rhfafqmc.py  parallel_fp.py  pt2ccsd.py  rhf.py  rhf_fp.py  spin_proj_s2.py  ucisd.py  ucisd_fp.py  ucisd_uccsd_fp.py  ucisdt.py  ucisdtq.py  uhf.py  uhf_fp.py
tests/: __init__.py  mf_s2.pkl  test_afqmc_params.py  test_block_state_logger.py  test_ccpy_amplitudes.py  test_cis.py  test_cisd.py  test_cisd_fp.py  test_eom_cisd.py  test_eom_t_cisd.py  test_fp_rhf.py  test_gcisd.py  test_ghf.py  test_ghf_cpmc.py  test_io.py  test_lno.py  test_prop_afqmc_step.py  test_prop_chol_afqmc_ops.py  test_propagation.py  test_pt2ccsd.py  test_rhf.py  test_rhf_fp.py  test_sharding.py  test_spin_proj_s2.py  test_trial_rhf.py  test_uccsd.py  test_ucisd.py  test_ucisd_fp.py  test_ucisd_molecular.py  test_ucisd_uccsd_fp.py  test_ucisdt.py  test_ucisdt_molecular.py  test_ucisdtq.py  test_ucisdtq_molecular.py  test_ug.py  test_uhf.py  test_uhf_fp.py  test_walkers.py  test_wavefunctions.py
(+64 files in other folders)
