[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trot"
version = "0.1.0"
description = "Differentiable Auxiliary-Field Quantum Monte Carlo"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxlib",
    "h5py",
    "pyscf",
]

[project.optional-dependencies]
gpu = ["jaxlib[cuda]"] 

[tool.setuptools]
packages = ["trot"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E741", "E731", "E501"]

[tool.pyright]
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportUnboundVariable = false
reportOptionalOperand = false
reportOptionalMemberAccess = false
reportIncompatibleMethodOverride = false
reportPrivateImportUsage = false
reportMissingImports = false
reportPossiblyUnboundVariable = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: long-running tests excluded from the default test run",
    "integration: end-to-end tests that exercise real staged or AFQMC execution paths",
]
